--- a/config/content.htm
+++ b/config/content.htm
@@ -42,9 +42,10 @@
 <h3>w7</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/G_XJtgvAw9E?si=ZBX2tkcDPBC2Qbha" title="YouTube video player" width="560"></iframe></p>
 <h3>w10</h3>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dTdKgnUCJDc" width="560"></iframe></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mjY7mJTDjOw" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gT-0c74-f2Q" width="560"></iframe></p>
-<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/xGhzyitv3eQ" width="560"></iframe>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T6TZ8_HuvRg" width="560"></iframe></p>
+<p></p>
+<p></p>
+<p></p>
 <h1>HW 2</h1>
 <p>.be/mjY7mJTDjOw?si=ynnyz_Qs</p>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
