--- a/content/w10.html
+++ b/content/w10.html
@@ -142,9 +142,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w10</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dTdKgnUCJDc" width="560"></iframe></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mjY7mJTDjOw" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gT-0c74-f2Q" width="560"></iframe></p>
-<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/xGhzyitv3eQ" width="560"></iframe>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T6TZ8_HuvRg" width="560"></iframe></p>
+<p></p>
+<p></p>
+<p></p>
 <br />w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
