--- a/content/w10.html
+++ b/content/w10.html
@@ -143,9 +143,9 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w10</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T6TZ8_HuvRg" width="560"></iframe></p>
-<p></p>
-<p></p>
-<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/YSO9UTGEJYg" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/0w3iwthX41c" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/rtEBztBdVe4" width="560"></iframe>心得:我前面因為拍影片一直錯到最會後我居然做到便非常快，非常熟練，我前面第一個是做的最差的一個題目最後面我自己覺得做的最好 因為都完成了 而且速度非常快，且五個方法都非常熟悉，</p>
 <br />w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
