--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -379,6 +379,25 @@
 </tbody>
 </table>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/TPWjWue8T9c" width="560"></iframe></p>
+<h3>w12_hw</h3>
+<p>這段 Python 程式碼會執行以下兩個部分：</p>
+<ol>
+<li><strong>印出金字塔形狀</strong>： 第一部分會印出由星號 (<code>*</code>) 組成的金字塔形狀，每行的星號數量是逐漸增加的，而每行的前導空格數量則逐漸減少。例如，對於 <code>n = 5</code>，會輸出：</li>
+</ol>
+<div class="contain-inline-size rounded-md border-[0.5px] border-token-border-medium relative bg-token-sidebar-surface-primary dark:bg-gray-950">
+<div class="flex items-center text-token-text-secondary px-4 py-2 text-xs font-sans justify-between rounded-t-md h-9 bg-token-sidebar-surface-primary dark:bg-token-main-surface-secondary select-none">markdown</div>
+<div class="sticky top-9 md:top-[5.75rem]">
+<div class="absolute bottom-0 right-2 flex h-9 items-center">
+<div class="flex items-center rounded bg-token-sidebar-surface-primary px-2 font-sans text-xs text-token-text-secondary dark:bg-token-main-surface-secondary"><strong></strong></div>
+<div class="flex items-center rounded bg-token-sidebar-surface-primary px-2 font-sans text-xs text-token-text-secondary dark:bg-token-main-surface-secondary"><strong> 學習基礎的迴圈和格式化字串</strong>：這段程式碼幫助理解如何使用迴圈來生成圖形，並學會如何格式化字串來顯示變數的值。</div>
+<div class="flex items-center rounded bg-token-sidebar-surface-primary px-2 font-sans text-xs text-token-text-secondary dark:bg-token-main-surface-secondary"><strong>簡單易懂</strong>：程式碼結構清晰，適合初學者理解基本的程式設計概念。</div>
+<div class="flex items-center rounded bg-token-sidebar-surface-primary px-2 font-sans text-xs text-token-text-secondary dark:bg-token-main-surface-secondary"><strong>靈活性高</strong>：可以輕鬆調整 <code>n</code> 來改變金字塔的大小。</div>
+<div class="flex items-center rounded bg-token-sidebar-surface-primary px-2 font-sans text-xs text-token-text-secondary dark:bg-token-main-surface-secondary"></div>
+<div class="flex items-center rounded bg-token-sidebar-surface-primary px-2 font-sans text-xs text-token-text-secondary dark:bg-token-main-surface-secondary">程式碼n = 5 # 設定層數 space = ' ' # 空格字元 # 第一部分：印出金字塔 for i in range(n): # 對於每一行 # 印出空格 print(space * (n - i - 1), end='') # 末尾不換行 # 印出星號 print('*' * (2 * i + 1)) # 星號數量為 2*i+1 print() # 加一個空行 # 第二部分：顯示當前數字 for i in range(n): # 對於每一行 # 印出當前的數字 print(f"目前的數字為 {i}")</div>
+</div>
+</div>
+</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/LKECz_UpLL0" width="560"></iframe></p>
 <h1>HW 2</h1>
 <p>.be/mjY7mJTDjOw?si=ynnyz_Qs</p>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
