增加w11_hw程式碼網址

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -51,78 +51,79 @@
 <p>2. 已知可以在網頁中利用 Brython 繪製方格與塗色, 如下連結, 請設法修改此一程式, 直接將程式存入個人的 Gist, 並利用黑色方塊圍出一個圓形區域.</p>
 <p><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5705fc2a67aa1db0c0d44d6d0478b08b/raw/f95909804a1f134963cade8463eeb9bd32129ea8/grid_line_and_fill_in_Brython.py">網頁上的方格與塗色</a></p>
 <p>第一題程式</p>
-<table class="highlight tab-size js-file-line-container js-code-nav-container js-tagsearch-file" data-hpc="" data-paste-markdown-skip="" data-tab-size="8" data-tagsearch-lang="Python" data-tagsearch-path="hw1.py">
+<p><a href="https://gist.github.com/LYX41323113/21a480f7435af78a6281dc0aa7b8fd0e">https://gist.github.com/LYX41323113/21a480f7435af78a6281dc0aa7b8fd0e</a></p>
+<table class="highlight tab-size js-file-line-container js-code-nav-container js-tagsearch-file" data-hpc="" data-paste-markdown-skip="" data-tab-size="8" data-tagsearch-lang="Python" data-tagsearch-path="hw1.py" style="width: 454px;">
 <tbody>
 <tr>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC1"><span class="pl-k">def</span> <span class="pl-en">draw_circle</span>():</td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC1" style="width: 98.4375px;"><span class="pl-k">def</span> <span class="pl-en">draw_circle</span>():</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="2" id="file-hw1-py-L2"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC2"><span class="pl-s1">size</span> <span class="pl-c1">=</span> <span class="pl-c1">10</span></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="2" id="file-hw1-py-L2" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC2" style="width: 338.562px;"><span class="pl-s1">size</span> <span class="pl-c1">=</span> <span class="pl-c1">10</span></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="3" id="file-hw1-py-L3"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC3"><span class="pl-s1">center_x</span> <span class="pl-c1">=</span> <span class="pl-s1">size</span> <span class="pl-c1">//</span> <span class="pl-c1">2</span></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="3" id="file-hw1-py-L3" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC3" style="width: 338.562px;"><span class="pl-s1">center_x</span> <span class="pl-c1">=</span> <span class="pl-s1">size</span> <span class="pl-c1">//</span> <span class="pl-c1">2</span></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="4" id="file-hw1-py-L4"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC4"><span class="pl-s1">center_y</span> <span class="pl-c1">=</span> <span class="pl-s1">size</span> <span class="pl-c1">//</span> <span class="pl-c1">2</span></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="4" id="file-hw1-py-L4" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC4" style="width: 338.562px;"><span class="pl-s1">center_y</span> <span class="pl-c1">=</span> <span class="pl-s1">size</span> <span class="pl-c1">//</span> <span class="pl-c1">2</span></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="5" id="file-hw1-py-L5"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC5"><span class="pl-s1">radius</span> <span class="pl-c1">=</span> <span class="pl-c1">4</span></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="5" id="file-hw1-py-L5" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC5" style="width: 338.562px;"><span class="pl-s1">radius</span> <span class="pl-c1">=</span> <span class="pl-c1">4</span></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="6" id="file-hw1-py-L6"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC6"></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="6" id="file-hw1-py-L6" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC6" style="width: 338.562px;"></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="7" id="file-hw1-py-L7"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC7"><span class="pl-k">for</span> <span class="pl-s1">y</span> <span class="pl-c1">in</span> <span class="pl-en">range</span>(<span class="pl-s1">size</span>):</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="7" id="file-hw1-py-L7" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC7" style="width: 338.562px;"><span class="pl-k">for</span> <span class="pl-s1">y</span> <span class="pl-c1">in</span> <span class="pl-en">range</span>(<span class="pl-s1">size</span>):</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="8" id="file-hw1-py-L8"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC8"><span class="pl-k">for</span> <span class="pl-s1">x</span> <span class="pl-c1">in</span> <span class="pl-en">range</span>(<span class="pl-s1">size</span>):</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="8" id="file-hw1-py-L8" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC8" style="width: 338.562px;"><span class="pl-k">for</span> <span class="pl-s1">x</span> <span class="pl-c1">in</span> <span class="pl-en">range</span>(<span class="pl-s1">size</span>):</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="9" id="file-hw1-py-L9"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC9"><span class="pl-c"># 計算到圓心的距離</span></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="9" id="file-hw1-py-L9" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC9" style="width: 338.562px;"><span class="pl-c"># 計算到圓心的距離</span></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="10" id="file-hw1-py-L10"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC10"><span class="pl-s1">distance</span> <span class="pl-c1">=</span> ((<span class="pl-s1">x</span> <span class="pl-c1">-</span> <span class="pl-s1">center_x</span>) <span class="pl-c1">**</span> <span class="pl-c1">2</span> <span class="pl-c1">+</span> (<span class="pl-s1">y</span> <span class="pl-c1">-</span> <span class="pl-s1">center_y</span>) <span class="pl-c1">**</span> <span class="pl-c1">2</span>) <span class="pl-c1">**</span> <span class="pl-c1">0.5</span></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="10" id="file-hw1-py-L10" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC10" style="width: 338.562px;"><span class="pl-s1">distance</span> <span class="pl-c1">=</span> ((<span class="pl-s1">x</span> <span class="pl-c1">-</span> <span class="pl-s1">center_x</span>) <span class="pl-c1">**</span> <span class="pl-c1">2</span> <span class="pl-c1">+</span> (<span class="pl-s1">y</span> <span class="pl-c1">-</span> <span class="pl-s1">center_y</span>) <span class="pl-c1">**</span> <span class="pl-c1">2</span>) <span class="pl-c1">**</span> <span class="pl-c1">0.5</span></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="11" id="file-hw1-py-L11"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC11"><span class="pl-c"># 判斷距離是否接近圓形邊緣，若是則繪製圓</span></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="11" id="file-hw1-py-L11" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC11" style="width: 338.562px;"><span class="pl-c"># 判斷距離是否接近圓形邊緣，若是則繪製圓</span></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="12" id="file-hw1-py-L12"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC12"><span class="pl-k">if</span> <span class="pl-en">abs</span>(<span class="pl-s1">distance</span> <span class="pl-c1">-</span> <span class="pl-s1">radius</span>) <span class="pl-c1">&lt;</span> <span class="pl-c1">1</span>:</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="12" id="file-hw1-py-L12" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC12" style="width: 338.562px;"><span class="pl-k">if</span> <span class="pl-en">abs</span>(<span class="pl-s1">distance</span> <span class="pl-c1">-</span> <span class="pl-s1">radius</span>) <span class="pl-c1">&lt;</span> <span class="pl-c1">1</span>:</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="13" id="file-hw1-py-L13"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC13"><span class="pl-en">print</span>(<span class="pl-s">'*'</span>, <span class="pl-s1">end</span><span class="pl-c1">=</span><span class="pl-s">''</span>)</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="13" id="file-hw1-py-L13" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC13" style="width: 338.562px;"><span class="pl-en">print</span>(<span class="pl-s">'*'</span>, <span class="pl-s1">end</span><span class="pl-c1">=</span><span class="pl-s">''</span>)</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="14" id="file-hw1-py-L14"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC14"><span class="pl-k">else</span>:</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="14" id="file-hw1-py-L14" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC14" style="width: 338.562px;"><span class="pl-k">else</span>:</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="15" id="file-hw1-py-L15"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC15"><span class="pl-en">print</span>(<span class="pl-s">' '</span>, <span class="pl-s1">end</span><span class="pl-c1">=</span><span class="pl-s">''</span>)</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="15" id="file-hw1-py-L15" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC15" style="width: 338.562px;"><span class="pl-en">print</span>(<span class="pl-s">' '</span>, <span class="pl-s1">end</span><span class="pl-c1">=</span><span class="pl-s">''</span>)</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="16" id="file-hw1-py-L16"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC16"><span class="pl-en">print</span>()</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="16" id="file-hw1-py-L16" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC16" style="width: 338.562px;"><span class="pl-en">print</span>()</td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="17" id="file-hw1-py-L17"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC17"></td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="17" id="file-hw1-py-L17" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC17" style="width: 338.562px;"></td>
 </tr>
 <tr>
-<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="18" id="file-hw1-py-L18"></td>
-<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC18"><span class="pl-en">draw_circle</span>()</td>
+<td class="blob-num js-line-number js-code-nav-line-number js-blob-rnum" data-line-number="18" id="file-hw1-py-L18" style="width: 98.4375px;"></td>
+<td class="blob-code blob-code-inner js-file-line" id="file-hw1-py-LC18" style="width: 338.562px;"><span class="pl-en">draw_circle</span>()</td>
 </tr>
 </tbody>
 </table>
@@ -379,7 +380,7 @@
 </tbody>
 </table>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/TPWjWue8T9c" width="560"></iframe></p>
-<h3>w12_hw</h3>
+<h3>w12</h3>
 <p>這段 Python 程式碼會執行以下兩個部分：</p>
 <ol>
 <li><strong>印出金字塔形狀</strong>： 第一部分會印出由星號 (<code>*</code>) 組成的金字塔形狀，每行的星號數量是逐漸增加的，而每行的前導空格數量則逐漸減少。例如，對於 <code>n = 5</code>，會輸出：</li>
