更改W13ㄉㄜ更改W13的解答

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -73,43 +73,178 @@
 </div>
 </div>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/LKECz_UpLL0" width="560"></iframe></p>
-<h3>w13_hw</h3>
-<p></p>
-<p>w13_hw</p>
-<!-- 引入 Brython -->
-<script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js" type="text/javascript"></script>
-<h3>w13_hw</h3>
-<div id="canvas-container"><!-- 這裡將顯示你的 SVG 畫布 --></div>
-<script type="text/python">
-    from browser import document, svg
+<br/><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5eca62565d509668d731720f1994e127/raw/c885949528f12bfa567ebbd2474d13ef4b5c1e46/if_append_brython.py" title="解">https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5eca62565d509668d731720f1994e127/raw/c885949528f12bfa567ebbd2474d13ef4b5c1e46/if_append_brython.py</a>w13_hw
+<!-- 導入 brython 程式庫 -->
+<p>
+<script src="/static/brython.js"></script>
+<script src="/static/brython_stdlib.js"></script>
+</p>
+<!-- 啟動 Brython -->
+<p>
+<script>
+window.onload=function(){
+brython({debug:1, pythonpath:['./../cmsimde/static/','./../downloads/py/']});
+}
+</script>
+</p>
+<div id="brython_div1"><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5eca62565d509668d731720f1994e127/raw/c885949528f12bfa567ebbd2474d13ef4b5c1e46/if_append_brython.py" title="解"></a></div>
+<p>
+<script type="text/python3">
+from browser import html
+from browser import document as doc
 
-    # 建立畫布
-    canvas = svg.svg(width=400, height=400)
-    document["canvas-container"] <= canvas  # 將 SVG 畫布插入到指定的 div 中
+# 利用 html 建立 canvas 超文件物件
+canvas = html.CANVAS(width=400, height=400)
+brython_div = doc["brython_div1"]
+brython_div <= canvas
 
-    # 定義方形邊長
-    side_length = 100
+ctx = canvas.getContext("2d")
+ctx.lineWidth = 1  # 設定邊框線寬
 
-    # 第一個方形的左上角 (起始點)
-    x1, y1 = 50, 50
+# 繪製對角線，顏色設定為藍色
+ctx.strokeStyle = 'blue'  # 設定對角線顏色為藍色
+ctx.beginPath()
+ctx.moveTo(20, 20)  # 調整起點位置
+ctx.lineTo(100, 100)  # 第一條對角線，縮小大小
+ctx.stroke()
 
-    # 第二個方形相對位置 (平移)
-    offset = 50
+# 繪製外接圓，圓心位於第一個矩形的中央
+center_x1 = 20 + 80 / 2  # 第一個矩形的X中心
+center_y1 = 20 + 80 / 2  # 第一個矩形的Y中心
 
-    # 畫第一個方形
-    canvas <= svg.rect(x=x1, y=y1, width=side_length, height=side_length, 
-                       fill="none", stroke="red")
+# 半徑為第一個矩形對角線的一半
+radius1 = (80 * (2 ** 0.5)) / 2
 
-    # 畫第二個方形
-    canvas <= svg.rect(x=x1+offset, y=y1+offset, width=side_length, height=side_length, 
-                       fill="none", stroke="red")
+# 繪製外接圓
+ctx.strokeStyle = 'green'  # 設定圓的顏色為綠色
+ctx.beginPath()
+ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)  # 圓心 (center_x1, center_y1) 和半徑
+ctx.stroke()
 
-    # 畫藍色對角線
-    canvas <= svg.line(x1=x1, y1=y1+side_length, 
-                       x2=x1+side_length, y2=y1, 
-                       stroke="blue")
-    
-</script><h1>HW 2</h1>
+# 繪製外接圓，圓心位於第二個矩形的中央
+center_x2 = 60 + 80 / 2  # 第二個矩形的X中心
+center_y2 = 60 + 80 / 2  # 第二個矩形的Y中心
+
+# 半徑為第二個矩形對角線的一半
+radius2 = (80 * (2 ** 0.5)) / 2
+
+# 繪製外接圓
+ctx.strokeStyle = 'purple'  # 設定圓的顏色為紫色
+ctx.beginPath()
+ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)  # 圓心 (center_x2, center_y2) 和半徑
+ctx.stroke()
+
+# 繪製第一個矩形，並填充顏色
+ctx.fillStyle = 'yellow'  # 設定填充顏色為黃色
+ctx.strokeStyle = 'red'   # 設定邊框顏色為紅色
+
+ctx.rect(20, 20, 80, 80)  # 設定矩形的位置和大小，縮小為 80x80
+ctx.stroke()  # 繪製邊框
+ctx.beginPath()
+
+# 繪製第二個矩形
+ctx.strokeStyle = 'green'    # 設定邊框顏色為綠色
+ctx.beginPath()
+ctx.rect(60, 60, 80, 80)  # 設定第二個矩形的位置和大小，縮小為 60x60
+ctx.stroke()  # 繪製邊框
+
+# 填充圓形的區域，排除與正方形的重疊部分
+ctx.globalCompositeOperation = 'source-over'  # 設定為填充模式
+ctx.fillStyle = 'lightblue'  # 設定圓形內部填充顏色為淺藍色
+
+# 填充第一個圓形
+ctx.beginPath()
+ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)
+ctx.fill()
+
+# 填充第二個圓形
+ctx.beginPath()
+ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)
+ctx.fill()
+
+# 刪除圓形與正方形重疊的區域
+ctx.globalCompositeOperation = 'destination-out'  # 設定為刪除重疊區域模式
+
+# 刪除第一個圓與正方形重疊的區域
+ctx.beginPath()
+ctx.rect(20, 20, 80, 80)  # 第一個矩形區域
+ctx.fill()
+
+# 刪除第二個圓與正方形重疊的區域
+ctx.beginPath()
+ctx.rect(60, 60, 80, 80)  # 第二個矩形區域
+ctx.fill()
+
+# 填充重疊區域的顏色（位於兩個正方形重疊的區域）
+ctx.globalCompositeOperation = 'source-over'  # 恢復填充模式
+ctx.fillStyle = 'orange'  # 設定重疊區域填充顏色為橙色
+
+# 填充第一個矩形的內部
+ctx.globalCompositeOperation = 'source-over'  # 設定為填充模式
+ctx.fillStyle = 'lightyellow'  # 設定填充顏色
+ctx.beginPath()
+ctx.rect(20, 20, 80, 80)  # 第一個矩形區域
+ctx.fill()
+
+# 填充第二個矩形的內部
+ctx.fillStyle = 'lightgreen'  # 設定填充顏色
+ctx.beginPath()
+ctx.rect(60, 60, 80, 80)  # 第二個矩形區域
+ctx.fill()
+
+# 填充第一個圓形和矩形之間的空白區域
+ctx.fillStyle = 'lightblue'  # 設定填充顏色
+ctx.beginPath()
+ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)
+ctx.rect(20, 20, 80, 80)  # 使用複合模式
+ctx.globalCompositeOperation = 'destination-over'  # 填充背景模式
+ctx.fill()
+
+# 填充第二個圓形和矩形之間的空白區域
+ctx.fillStyle = 'lightpurple'  # 設定填充顏色
+ctx.beginPath()
+ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)
+ctx.rect(60, 60, 80, 80)  # 使用複合模式
+ctx.globalCompositeOperation = 'destination-over'
+ctx.fill()
+
+# 重置繪圖操作模式
+ctx.globalCompositeOperation = 'source-over'
+
+
+# 重疊區域填充
+ctx.beginPath()
+ctx.rect(60, 60, 40, 40)  # 重疊區域的範圍 (兩個矩形重疊部分)
+ctx.fill()
+
+# 重新繪製斜線，確保它在最上層
+ctx.strokeStyle = 'blue'  # 設定斜線顏色為藍色
+ctx.beginPath()
+ctx.moveTo(20, 20)
+ctx.lineTo(140, 140)  # 斜線
+ctx.stroke()
+
+# 最後繪製所有的邊框，確保線條不被遮蓋
+ctx.strokeStyle = 'red'   # 第一個矩形的邊框顏色
+ctx.beginPath()
+ctx.rect(20, 20, 80, 80)  # 第一個矩形的位置和大小
+ctx.stroke()
+
+ctx.strokeStyle = 'green'  # 第二個矩形的邊框顏色
+ctx.beginPath()
+ctx.rect(60, 60, 80, 80)  # 第二個矩形的位置和大小
+ctx.stroke()
+
+ctx.strokeStyle = 'black'  # 圓形邊框顏色
+ctx.beginPath()
+ctx.arc(center_x1, center_y1, radius1, 0, 2 * 3.14159)  # 第一個圓
+ctx.stroke()
+
+ctx.beginPath()
+ctx.arc(center_x2, center_y2, radius2, 0, 2 * 3.14159)  # 第二個圓
+ctx.stroke()
+</script>
+</p><h1>HW 2</h1>
 <p>.be/mjY7mJTDjOw?si=ynnyz_Qs</p>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
