--- a/config/content.htm
+++ b/config/content.htm
@@ -74,7 +74,10 @@
 </div>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/LKECz_UpLL0" width="560"></iframe></p>
 <h3>w13_hw</h3>
-<p><br/><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5eca62565d509668d731720f1994e127/raw/c885949528f12bfa567ebbd2474d13ef4b5c1e46/if_append_brython.py" title="解">https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5eca62565d509668d731720f1994e127/raw/c885949528f12bfa567ebbd2474d13ef4b5c1e46/if_append_brython.py</a>w13_hw</p>
+<p><br/><a href="https://gist.github.com/LYX41323113/90d5fdc12ba654118d97fd7c32a4598f" title="解">https://gist.github.com/LYX41323113/90d5fdc12ba654118d97fd7c32a4598f</a></p>
+<p></p>
+<p>心得:利用chat gpt我才能把要的圖形做出來不然我真的自己做不出來還有好友的支援非常感謝</p>
+<p></p>
 <!-- 導入 brython 程式庫 -->
 <p>
 <script src="/static/brython.js"></script>
